# EMMA

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  ERRORS-TO-FIX.md  Makefile  README.md  SECURITY.md  mypy.ini  pyproject.toml  requirements-sec.txt  requirements-train.txt  ruff.toml  setup_py2app.py
.github/workflows/: release-mac.yml  release-windows.yml
_planning/architecture/: coding-agent.md
_planning/notes/: CONFIG-DEPERSONALIZE-VERIFY.md  PAID-ONBOARDING-VERIFY.md  PHASE-2-VERIFY.md  WAKE-WORD-FIX-VERIFY.md  WAKE-WORD-RESEARCH.md
actions/: __init__.py  base.py  calendar_store.py  environment.py  macos.py
backend/: DEPLOY.md  Dockerfile  SETUP.md  account_routes.py  admin_routes.py  app.py  auth.py  auth_local.py  config.py  connection_manager.py  credits_routes.py  dashboard_credits.py  db.py  demo_session.py  demo_system_prompt.md  device_pairing.py  fly.toml  metering.py  netutil.py  openai_proxy.py  passwords.py  realtime_proxy.py  request_security.py  requirements.txt  schemas.py  scripts_diag_realtime.py  session.py  stripe_routes.py  wake_banned.txt  wake_routes.py  wake_runner.py
backend/static/: admin.html  dashboard.html  download.html  landing.html  login.html  nav.js  pair.html  plans.html  privacy.html  register.html  terms.html  tokens.css
backend/static/wake/: index.html
backend/tests/: conftest.py  test_abuse_protection.py  test_account.py  test_account_surface.py  test_auth.py  test_backend.py  test_dashboard_credits.py  test_db_migrations.py  test_demo_session.py  test_device_pairing.py  test_openai_proxy.py  test_plans.py  test_realtime_bridge.py  test_realtime_proxy.py  test_security_fixes.py  test_stripe.py  test_wake_routes.py  test_wake_runner.py
config/: app_capabilities.toml  dictionary.toml  settings.py  vocabulary.toml
core/: __init__.py  affect.py  app_capabilities.py  app_router.py  apps.py  audio.py  audio_devices.py  background.py  capability_gaps.py  coding_agent.py  conditionals.py  confidence.py  conversation.py  crash_handler.py  dev_state.py  diagnostics.py  dictionary.py  echo_gate.py  events_bus.py  llm.py  orchestrator.py  pairing.py  permissions.py  personality.py  realtime.py  realtime_playback.py  redaction.py  research_budget.py  runtime.py  runtime_state.py  screen_vision.py  secrets.py  session_memory.py  speaker.py  speech_wake.py  stt.py  tts.py  url_safety.py  visual_screen.py  vocabulary.py  (+4 more)
core/platform/: README.md  __init__.py  app_control.py  base.py  fs.py  notes.py  notify.py
core/platform/_mac/: __init__.py  app_control.py  fs.py  notes.py  notify.py
core/platform/_stub/: __init__.py  app_control.py  fs.py  notes.py  notify.py
core/platform/_win/: __init__.py  app_control.py  fs.py  notes.py  notify.py
core/proactive/: __init__.py  calendar_events.py  delivery.py  engine.py  proactivities.py  quiet.py  settings_writer.py  triggers.py  types.py  voice.py
dashboard/: __init__.py  index.html  server.py  visualizer.html
data/: README.md
docs/: scaling.md
docs/superpowers/plans/: 2026-07-23-security-privacy-reliability-hardening.md
docs/superpowers/specs/: 2026-07-23-security-privacy-reliability-hardening-design.md
emma/: __init__.py  __main__.py  calibrate.py  dictionary.py  permissions.py  security.py  setup.py  visualizer_window.py  x_setup.py
emma/memory/: __init__.py  review.py
emma/ui/: __init__.py  __main__.py
installer/: BUILD.md  README.md  appcast.xml  bootstrap.sh  build_pkg.sh  build_windows.py  com.garcia.emma.plist  component.plist  distribution.xml  entitlements.plist  install_macos.sh  notarize.sh  release.sh  sign.sh  sign_and_notarize.sh  uninstall_macos.sh  wix-installer.xml
installer/assets/: Emma.icns  license.txt  welcome.html
installer/firstrun/: wizard.html  wizard.py  wizard_win.py
installer/macos_pkg/: Distribution.xml  build_pkg.sh
installer/macos_pkg/resources/: Conclusion.html  License.html  Welcome.html
installer/macos_pkg/scripts/: postinstall  preinstall
installer/scripts/: postinstall
memory/: __init__.py  birthdays.py  embeddings.py  episodic.py  long_term.py  reflection.py  short_term.py  voice_profiles.py
scripts/: audit_memory_db.py  record_wake_validation.py  smoke_focus_matrix.py  train_wake_word.py  transcription_ab.py  wake_word_data.py  wake_word_data_eleven.py  wipe_wake_data.py
self/: capabilities.md  capability_gaps.md
tests/: __init__.py  security_smoke.py  smoke_screen_vision.py  test_affect.py  test_app_capabilities.py  test_app_control.py  test_app_router.py  test_background.py  test_bias_render.py  test_browser_tabs_mgmt.py  test_bug_fix_sweep.py  test_calendar_eventkit.py  test_calendar_events.py  test_calibrate.py  test_capability_gaps.py  test_codex_tool.py  test_coding_agent.py  test_conditionals.py  test_control_channel.py  test_conversation.py  test_credentials_signals.py  test_deep_research.py  test_destructive_flow.py  test_diagnostics.py  test_dictionary.py  test_echo_cancel.py  test_echo_gate_unit.py  test_egress_redaction.py  test_episodic.py  test_file_edit.py  test_file_ops.py  test_github_and_clone.py  test_ide_actions.py  test_ide_picker.py  test_ide_terminal_send.py  test_identity.py  test_in_app_resources.py  test_inapp_ops.py  test_integrations.py  test_intelligence_foundation.py  (+68 more)
tests/acceptance/: VOICE_HARNESS_README.md  __init__.py  audio_gen.py  audio_play.py  report_template.md  runner.py  scenarios.yaml  voice_driver.py
tools/: __init__.py  agents_tool.py  app_control.py  app_url_tool.py  base.py  birthday_tool.py  browser.py  calendar_tool.py  codex_tool.py  conditional_tool.py  contact_resolve.py  convert_tool.py  datetime_tool.py  deep_research.py  dev.py  diagnostics.py  diagnostics_tool.py  dictionary_tool.py  disambiguation.py  file_edit.py  file_ops_tool.py  finder_tool.py  git_tool.py  github_tool.py  history_tool.py  ide_actions.py  jira_tool.py  lifecycle_tool.py  linear_tool.py  mail_tool.py  memory_tool.py  messages_tool.py  music.py  notes_tool.py  notion_tool.py  postman_tool.py  preferences.py  proactive_tool.py  random_tool.py  registry.py  (+25 more)
(+1 files in other folders)
