[project]
name = "emma"
version = "0.1.0"
description = "Emma - bilingual voice-activated AI assistant for macOS"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Garcia" }]
dependencies = [
    "openwakeword>=0.6.0",
    # onnxruntime is openWakeWord's actual (and only) inference backend on
    # macOS — wake_word.py forces inference_framework="onnx". Pin it directly
    # instead of relying on it arriving transitively. NOTE: tensorflow and
    # ai-edge-litert were removed — they were ~400MB of dead weight, imported
    # nowhere and not pulled by openWakeWord on the onnx path.
    "onnxruntime>=1.10,<2",
    # Realtime API GA only; the 1.x line still shipped the removed Realtime beta.
    "openai>=2.0.0",
    "playwright>=1.40.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.1.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "spotipy>=2.23.0",
    "trafilatura>=1.12.0",
    "websockets>=12.0",
    "pipecat-ai[openai,silero]>=1.2.1",
    "pyaudio>=0.2.14",
    "sqlite-vec>=0.1.9",
    "pyobjc-framework-cocoa>=12.1",
    "pyobjc-framework-webkit>=12.1",
    "pvporcupine>=4.0.2",
    "croniter>=6.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.uv]
package = false
