[project]
name = "emma"
version = "0.1.0"
description = "Emma - bilingual voice-activated AI assistant for macOS"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Garcia" }]
dependencies = [
    # Shipped wake engine: sherpa-onnx KeywordSpotter (WAKE_WORD_ENGINE=sherpa).
    # Keyword-list KWS with per-keyword thresholds — the offline, no-key, no-train
    # replacement for Vosk, which ships NO macOS arm64 wheel (or sdist) and so can
    # never `uv sync` on Apple Silicon. sherpa-onnx has native macosx_11_0_arm64
    # wheels. Vosk (Linux/Intel only) now lives in the optional [vosk] group.
    "sherpa-onnx>=1.13.4",
    # sherpa-onnx's native libs (libsherpa-onnx-*.dylib + the bundled
    # libonnxruntime the glue .so dlopens via @rpath) ship in this companion
    # package. sherpa-onnx declares `Requires-Dist: sherpa-onnx-core==<ver>` but
    # marks it `Dynamic`, and uv drops that dynamic requirement — so without an
    # explicit dep the arm64 glue wheel installs alone and import fails with
    # "Library not loaded: @rpath/libonnxruntime". They release in lockstep;
    # keep the floors equal so uv always resolves a matching pair (both platforms
    # incl. the Linux backend have core wheels).
    "sherpa-onnx-core>=1.13.4",
    # BPE tokenizer for the KWS keyword list. core/wake_sherpa.py tokenizes the
    # wake phrases against the model's bpe.model at load, so WAKE_PHRASES stays the
    # single source of truth (no committed, drift-prone pre-tokenized asset). Native
    # wheel with a macosx_11_0_arm64 build; ~1MB.
    "sentencepiece>=0.2.0",
    # openWakeWord stays available (WAKE_WORD_ENGINE=openwakeword) for anyone who
    # trains a custom .onnx; it's pure-Python (py3-none-any) so it installs anywhere.
    "openwakeword>=0.6.0",
    "aiohttp>=3.14.1",  # 24.6: floor above 11 CVEs in <3.14.1 (transitive; pinned direct)
    # onnxruntime is openWakeWord's actual (and only) inference backend on
    # macOS — wake_word.py forces inference_framework="onnx". Pin it directly
    # instead of relying on it arriving transitively. NOTE: tensorflow and
    # ai-edge-litert were removed — they were ~400MB of dead weight, imported
    # nowhere and not pulled by openWakeWord on the onnx path.
    "onnxruntime>=1.10,<2",
    # Realtime API GA only; the 1.x line still shipped the removed Realtime beta.
    "openai>=2.0.0",
    "playwright>=1.40.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.14.2",  # 24.6: floor above GHSA-4xgf-cpjx-pc3j
    "structlog>=24.0.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.1.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "spotipy>=2.23.0",
    "trafilatura>=1.12.0",
    "websockets>=12.0",
    "pipecat-ai[openai,silero]>=1.2.1",
    "pyaudio>=0.2.14",
    "sqlite-vec>=0.1.9",
    "pyobjc-framework-cocoa>=12.1",
    "pyobjc-framework-webkit>=12.1",
    "pvporcupine>=4.0.2",
    "croniter>=6.2.2",
    "pyobjc-framework-applicationservices>=12.2",
    "pyobjc-framework-vision>=12.2",  # on-device screenshot OCR (look_at_screen)
]

[project.optional-dependencies]
# Legacy Vosk always-on wake engine (WAKE_WORD_ENGINE=vosk). Vosk publishes NO
# macOS arm64 wheel and NO sdist, so it CANNOT be a base dependency on the Apple
# Silicon target — `uv sync` would hard-fail with "no wheel for this platform".
# It resolves only on Linux/Intel (the backend box never imports it). Install
# explicitly on a supported host with `pip install -e .[vosk]`.
vosk = [
    "vosk>=0.3.44 ; platform_system == 'Linux'",
]

# Optional speaker-ID (Prompt 35.1). Resemblyzer is BSD, ~30 MB models. Install with
# `pip install -e .[speaker]`. Absent → speaker ID degrades to "always Garcia"; the
# daemon never refuses to start without it.
speaker = [
    "resemblyzer>=0.1.4",
]

# Windows-only (Prompt 30). Installed ONLY on Windows (`pip install -e .[windows]`);
# never pulled on macOS, so they can't break the Mac build. Real Tier-3 impls (30.x)
# use these; the cross-platform stubs need none of them.
windows = [
    "pywin32>=306",
    "comtypes>=1.4",
    "keyring>=25.0",     # Windows Credential Manager (cross-platform secrets API)
    "pyinstaller>=6.0",  # build the .exe
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.uv]
package = false
